--- a/style.css
+++ b/style.css
@@ -13,7 +13,9 @@
     --color-theme-product-chrome: var(--color-theme-bg);
     --color-theme-product-editor: var(--color-theme-card-hex);
     --color-theme-product-text: #26251eeb;
-    --color-theme-border-02: color-mix(in oklab,var(--color-theme-fg)10%,transparent)
+    --color-theme-border-02: color-mix(in oklab, var(--color-theme-fg)10%, transparent);
+    --color-theme-border-01: color-mix(in oklab, var(--color-theme-fg)2.5%, transparent);
+    --color-theme-accent: #f54e00;
 }
 
 @font-face {
@@ -58,6 +60,7 @@ a {
     padding: 0px 20px;
     position: sticky;
     top: 0;
+    z-index: 10;
 }
 
 .logo {
@@ -150,7 +153,7 @@ a {
     display: inline-block;
 }
 
-.bg-1{
+.bg-1 {
     background-image: url(assets/images/bg-1.webp);
     background-position: center;
     background-size: cover;
@@ -168,21 +171,104 @@ a {
 }
 
 .editor img {
-  display: block;
-  width: 100%;
-  height: auto;
-  border-radius: 10px;
+    display: block;
+    width: 100%;
+    height: auto;
+    border-radius: 12px;
 }
 
 .editor-main {
-  width: 1025px;
-  box-shadow: 0 28px 70px rgba(0, 0, 0, 0.14), 0 14px 32px rgba(0, 0, 0, 0.1), 0 0 0 1px var(--color-theme-border-02);
-  /* I have copied these values from cursor website with help of dev tools */
+    width: 1025px;
+    box-shadow: 0 28px 70px rgba(0, 0, 0, 0.14), 0 14px 32px rgba(0, 0, 0, 0.1), 0 0 0 1px var(--color-theme-border-02);
+    /* I have copied these values from cursor website with help of dev tools */
 }
 
 .editor-float {
-  width: 420px;
-  position: absolute;
-  right: 63px;
-  bottom: 48px;
+    width: 420px;
+    position: absolute;
+    right: 63px;
+    bottom: 48px;
+}
+
+.section-2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: var(--color-theme-fg);
+    font-size: 14px;
+    padding-bottom: 33.6px;
+}
+
+.section-2 p {
+    margin-bottom: 22.4px;
+}
+
+.brand-cards{
+    display: flex;
+    gap: 10px;
+}
+
+
+.brand-card img{
+    height: 40px;
+}
+
+.brand-card{
+    background-color: var(--color-theme-card-hex);
+    padding: 0px 7.5px;
+    width: 138px;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 4px;
+    border: solid 1px var(--color-theme-border-01);
+}
+
+.section-3 {
+    padding: 67.2px 0px;
+}
+
+.section-3-container{
+    padding: 17.5px;
+    background-color: var(--color-theme-card-hex);
+    border: solid 1px var(--color-theme-border-01);
+    border-radius: 4px;
+    height: 650px;
+    display: grid;
+    grid-template-columns: 0.5fr 1fr;
+}
+
+.sec-3-left {
+    display: flex;
+    align-items: center;
+}
+.sec-3-content h3{
+    color: var(--color-theme-fg);
+    font-size: 22px;
+}
+.sec-3-content p{
+    color: oklab(0.943853 0.00107113 0.000336707 / 0.6);
+    font-size: 22px;
+}
+.sec-3-content div{
+    color: var(--color-theme-accent);
+    font-size: 16px;
+    margin-top: 15px;
+}
+
+.sec-3-right {
+    background-image: url(assets/images/bg-2.webp);
+    background-position: center;
+    background-size: cover;
+    border-radius: 4px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.editor-3 {
+    width: 680px;
+    box-shadow: 0 28px 70px rgba(0, 0, 0, 0.14), 0 14px 32px rgba(0, 0, 0, 0.1), 0 0 0 1px var(--color-theme-border-02);
 }
