--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@
 
 @font-face {
     font-family: CursorGothic;
-    src: url(/assets/fonts/CursorGothic-Regular.woff2) format("woff2");
+    src: url(./assets/fonts/CursorGothic-Regular.woff2) format("woff2");
     font-display: swap;
     font-weight: 400;
     font-style: normal;
